--- a/index.html
+++ b/index.html
@@ -148,8 +148,14 @@
                   class="accordion-button"
                   type="button"
                   data-bs-toggle="collapse"
-                ></button>
+                  data-bs-target="chapter-1"
+                  aria-expanded="true"
+                  aria-controls="chapter-1"
+                >
+                  chapter-1: Your first website that converts
+                </button>
               </h2>
+              <div id="chapter-1"></div>
             </div>
           </div>
         </div>
