--- a/index.html
+++ b/index.html
@@ -148,14 +148,135 @@
                   class="accordion-button"
                   type="button"
                   data-bs-toggle="collapse"
-                  data-bs-target="chapter-1"
+                  data-bs-target="#chapter-1"
                   aria-expanded="true"
                   aria-controls="chapter-1"
                 >
                   chapter-1: Your first website that converts
                 </button>
               </h2>
-              <div id="chapter-1"></div>
+              <div
+                id="chapter-1"
+                class="accordion-collapse collapse"
+                aria-labelledby="heading-1"
+                data-bs-parent="#chapters"
+              >
+                <div class="accordion-body">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odio fuga exercitationem porro ipsa esse molestiae omnis
+                    quae, corporis, soluta assumenda qui quisquam quas,
+                    voluptatum ad.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
+                    fugiat! Labore, soluta est.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="heading-2">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#chapter-2"
+                  aria-expanded="true"
+                  aria-controls="chapter-2"
+                >
+                  chapter-1: Your first website that converts
+                </button>
+              </h2>
+              <div
+                id="chapter-2"
+                class="accordion-collapse collapse"
+                aria-labelledby="heading-2"
+                data-bs-parent="#chapters"
+              >
+                <div class="accordion-body">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odio fuga exercitationem porro ipsa esse molestiae omnis
+                    quae, corporis, soluta assumenda qui quisquam quas,
+                    voluptatum ad.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
+                    fugiat! Labore, soluta est.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="heading-3">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#chapter-3"
+                  aria-expanded="true"
+                  aria-controls="chapter-3"
+                >
+                  chapter-1: Your first website that converts
+                </button>
+              </h2>
+              <div
+                id="chapter-3"
+                class="accordion-collapse collapse"
+                aria-labelledby="heading-3"
+                data-bs-parent="#chapters"
+              >
+                <div class="accordion-body">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odio fuga exercitationem porro ipsa esse molestiae omnis
+                    quae, corporis, soluta assumenda qui quisquam quas,
+                    voluptatum ad.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
+                    fugiat! Labore, soluta est.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="heading-4">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#chapter-4"
+                  aria-expanded="true"
+                  aria-controls="chapter-4"
+                >
+                  chapter-1: Your first website that converts
+                </button>
+              </h2>
+              <div
+                id="chapter-4"
+                class="accordion-collapse collapse show"
+                aria-labelledby="heading-4"
+                data-bs-parent="#chapters"
+              >
+                <div class="accordion-body">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odio fuga exercitationem porro ipsa esse molestiae omnis
+                    quae, corporis, soluta assumenda qui quisquam quas,
+                    voluptatum ad.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
+                    fugiat! Labore, soluta est.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
