--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- <section class="section-padding section-bg-1">
+    <section class="section-padding section-bg-1">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-md-offset-6">
+          <div class="col-md-6 offset-md-6">
             <h2 class="section-title">Reputation <span>Management</span></h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem
@@ -121,167 +121,8 @@
           </div>
         </div>
       </div>
-    </section> -->
-    <div class="topics">
-      <div class="container-md">
-        <div class="text-center">
-          <h2>Inside the book.....</h2>
-          <p class="lead text-muted">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            fugit cum quasi totam enim quis?
-          </p>
-        </div>
-        <div class="row my-5 g-5 justify-content-around align-items-center">
-          <div class="col-6 col-lg-4">
-            <img
-              class="img-fluid"
-              src="https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="accordion image"
-              srcset=""
-            />
-          </div>
-          <!-- Accordion -->
-          <div class="accordion" id="chapters">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading-1">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#chapter-1"
-                  aria-expanded="true"
-                  aria-controls="chapter-1"
-                >
-                  chapter-1: Your first website that converts
-                </button>
-              </h2>
-              <div
-                id="chapter-1"
-                class="accordion-collapse collapse"
-                aria-labelledby="heading-1"
-                data-bs-parent="#chapters"
-              >
-                <div class="accordion-body">
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odio fuga exercitationem porro ipsa esse molestiae omnis
-                    quae, corporis, soluta assumenda qui quisquam quas,
-                    voluptatum ad.
-                  </p>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
-                    fugiat! Labore, soluta est.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading-2">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#chapter-2"
-                  aria-expanded="true"
-                  aria-controls="chapter-2"
-                >
-                  chapter-1: Your first website that converts
-                </button>
-              </h2>
-              <div
-                id="chapter-2"
-                class="accordion-collapse collapse"
-                aria-labelledby="heading-2"
-                data-bs-parent="#chapters"
-              >
-                <div class="accordion-body">
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odio fuga exercitationem porro ipsa esse molestiae omnis
-                    quae, corporis, soluta assumenda qui quisquam quas,
-                    voluptatum ad.
-                  </p>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
-                    fugiat! Labore, soluta est.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading-3">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#chapter-3"
-                  aria-expanded="true"
-                  aria-controls="chapter-3"
-                >
-                  chapter-1: Your first website that converts
-                </button>
-              </h2>
-              <div
-                id="chapter-3"
-                class="accordion-collapse collapse"
-                aria-labelledby="heading-3"
-                data-bs-parent="#chapters"
-              >
-                <div class="accordion-body">
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odio fuga exercitationem porro ipsa esse molestiae omnis
-                    quae, corporis, soluta assumenda qui quisquam quas,
-                    voluptatum ad.
-                  </p>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
-                    fugiat! Labore, soluta est.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="heading-4">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#chapter-4"
-                  aria-expanded="true"
-                  aria-controls="chapter-4"
-                >
-                  chapter-1: Your first website that converts
-                </button>
-              </h2>
-              <div
-                id="chapter-4"
-                class="accordion-collapse collapse show"
-                aria-labelledby="heading-4"
-                data-bs-parent="#chapters"
-              >
-                <div class="accordion-body">
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odio fuga exercitationem porro ipsa esse molestiae omnis
-                    quae, corporis, soluta assumenda qui quisquam quas,
-                    voluptatum ad.
-                  </p>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quaerat ullam neque dignissimos eligendi nulla quasi quo
-                    fugiat! Labore, soluta est.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
